@@ -36,12 +36,10 @@ browser.cgi:
 
 
 
-next database format (1.1):
-	- lastlog: host CHAR(40) --> TEXT
+next database format (1.2):
 	- hosts: change ether_key to server wide (instead of just zone)
-	- remove 'gid' from users table (implement groups memberships using 
-          user_rights table)
-        - hosts: new "dhcp_date" fields for "last seen by DHCP server" use
+
+
 
 
 
